python/pygimli -> pygimli

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-python/pygimli/_version.py export-subst
+pygimli/_version.py export-subst
 # Set the default behavior, in case people don't have core.autocrlf set.
 * text=auto
 
