fix weird shape.node.pos problem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -482,7 +482,13 @@ message(STATUS "****************************************************************
 if (CONDA_BUILD)
     message(STATUS "CONDA_BUILD: ${CONDA_BUILD}")
     if (APPLE)
-	set(PYTHON_LIBRARY "-undefined dynamic_lookup")
+	    set(PYTHON_LIBRARY "-undefined dynamic_lookup")
+    else()
+        if(EXISTS ${PYTHON_LIBRARY})
+            message(${PYTHON_LIBRARY} " exits")
+        else()
+            message(${PYTHON_LIBRARY} "does not exits")
+        endif()
     endif()
 endif()
 
