little cmake cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,6 +172,7 @@ if (NOT OLDPYTHON AND 1)
     # message(STATUS "Python_INCLUDE_DIRS: ${Python_INCLUDE_DIRS}")
     # message(STATUS "Python_LIBRARIES: ${Python_LIBRARIES} ${Python_LIBRARY_DIRS}")
     # message(STATUS "Python_NumPy: ${Python_NumPy_FOUND}, ${Python_NumPy_INCLUDE_DIRS}, ${Python_NumPy_VERSION}")
+    set (PYTHON_FOUND TRUE CACHE BOOL "Is python available")
 endif()
 
 function(find_boost_from_distname_file)
@@ -239,12 +240,14 @@ if (1)
 endif()
 
 if (NOT USE_BOOST_THREAD)
-set(Boost_THREAD_FOUND OFF)
-set(BOOST_BIND_FOUND OFF)
-set(USE_IPC OFF)
+    set(Boost_THREAD_FOUND OFF)
+    set(BOOST_BIND_FOUND OFF)
+    set(USE_IPC OFF)
+    set(THREADS "std")
 else()
-set(Boost_THREAD_FOUND ON)
-set(BOOST_BIND_FOUND ON)
+    set(Boost_THREAD_FOUND ON)
+    set(BOOST_BIND_FOUND ON)
+    set(THREADS "boost")
 endif()
 
 # Find packages that CHOLMOD depends on
@@ -518,12 +521,11 @@ if (CONDA_BUILD)
     endif()
 endif()
 
-message(STATUS "THREADS             : ${Threads_FOUND}    ${CMAKE_THREAD_LIBS_INIT}")
-message(STATUS "USE_BOOST_THREAD    : ${USE_BOOST_THREAD} ${Boost_THREAD_LIBRARIES}")
-message(STATUS "USE_OPENBLAS        : ${OPENBLAS_FOUND}    OPENBLAS_CBLAS_FOUND :${OPENBLAS_CBLAS_FOUND} OpenBLAS_INCLUDE_DIR :${OpenBLAS_INCLUDE_DIR}")
+message(STATUS "THREADS             : ${THREADS} ${CMAKE_THREAD_LIBS_INIT} ${Boost_THREAD_LIBRARIES}")
+message(STATUS "USE_OPENBLAS        : ${OPENBLAS_FOUND} OPENBLAS_CBLAS_FOUND :${OPENBLAS_CBLAS_FOUND} OpenBLAS_INCLUDE_DIR :${OpenBLAS_INCLUDE_DIR}")
 message(STATUS "CHOLMOD_LIBRARIES   : ${CHOLMOD_LIBRARIES}")
 message(STATUS "UMFPACK_LIBRARIES   : ${UMFPACK_LIBRARIES}")
-message(STATUS "TRIANGLE_FOUND      : ${TRIANGLE_FOUND}    Triangle_LIBRARIES: ${Triangle_LIBRARIES}")
+message(STATUS "TRIANGLE_FOUND      : ${TRIANGLE_FOUND} Triangle_LIBRARIES: ${Triangle_LIBRARIES}")
 message(STATUS "Python_EXECUTABLE   : ${Python_EXECUTABLE}" )
 message(STATUS "Python_LIBRARY_DIRS : ${Python_LIBRARY_DIRS}")
 message(STATUS "Python_LIBRARIES    : ${Python_LIBRARIES}" )
@@ -531,16 +533,16 @@ message(STATUS "Python_INCLUDE_DIRS : ${Python_INCLUDE_DIRS}")
 message(STATUS "Boost_INCLUDE_DIR   : ${Boost_INCLUDE_DIR}")
 message(STATUS "Boost_PYTHON_LIBRARY: ${Boost_PYTHON_LIBRARY}" )
 message(STATUS "Python_NumPy        : ${Python_NumPy_FOUND} ${Python_NumPy_INCLUDE_DIRS} ver: ${Python_NumPy_VERSION}")
-message(STATUS "CASTER_FOUND        : ${CASTER_FOUND}    Caster: ${CASTER_EXECUTABLE}")
-message(STATUS "PYGCCXML_FOUND      : ${PYGCCXML_FOUND}    PYGCCXML: ${PYGCCXML_PATH}" )
-message(STATUS "PYPLUSPLUS_FOUND    : ${PYPLUSPLUS_FOUND}    PYPLUSPLUS_PATH: ${PYPLUSPLUS_PATH}" )
+message(STATUS "CASTER_FOUND        : ${CASTER_FOUND} Caster: ${CASTER_EXECUTABLE}")
+message(STATUS "PYGCCXML_FOUND      : ${PYGCCXML_FOUND} PYGCCXML: ${PYGCCXML_PATH}" )
+message(STATUS "PYPLUSPLUS_FOUND    : ${PYPLUSPLUS_FOUND} PYPLUSPLUS_PATH: ${PYPLUSPLUS_PATH}" )
 message(STATUS "")
 message(STATUS "**********************************************************************")
 message(STATUS "*************** Optional Dependencies found **************************")
 message(STATUS "**********************************************************************")
-message(STATUS "CPPUNIT             : ${CPPUNIT_FOUND}    ${CPPUNIT_LIBRARIES}")
-message(STATUS "Doxygen             : ${DOXYGEN_FOUND}    ")
-message(STATUS "Sphinx              : ${SPHINX_FOUND}     ${SPHINX_EXECUTABLE} ${SPHINX_VERSION}")
+message(STATUS "CPPUNIT             : ${CPPUNIT_FOUND} ${CPPUNIT_LIBRARIES}")
+message(STATUS "Doxygen             : ${DOXYGEN_FOUND}")
+message(STATUS "Sphinx              : ${SPHINX_FOUND} ${SPHINX_EXECUTABLE} ${SPHINX_VERSION}")
 message(STATUS "**********************************************************************")
 
 if (Python_EXECUTABLE
@@ -556,7 +558,6 @@ if (Python_EXECUTABLE
     message(STATUS "")
     message(STATUS "pygimli can be build. run: make pygimli")
     message(STATUS "**********************************************************************")
-    message(STATUS "")
     message(STATUS "")
 else()
     message (FATAL_ERROR "pygimli cannot be build due to some missing packages.
