--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -39,7 +39,7 @@ if (UMFPACK_FOUND)
 endif (UMFPACK_FOUND)
 
 if (PYTHON_FOUND)
-    include_directories(${PYTHON_INCLUDE_DIR})
+    include_directories(${Python_INCLUDE_DIRS})
     target_link_libraries(${libgimli_TARGET_NAME} ${PYTHON_LIBRARY})
 endif (PYTHON_FOUND)
 
