fix wrong PYTHON_LIBRARY setting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -393,7 +393,7 @@ if (NOT Boost_PYTHON_LIBRARY)
             message(STATUS "looking for:" ${Boost_PYTHON_LIBRARY} "...")
             if (EXISTS ${Boost_PYTHON_LIBRARY})
                 message(STATUS ".. found.")
-                set(Boost_PYTHON_FOUND TRUE CACHE BOOL "boost python lib found"})
+                set(Boost_PYTHON_FOUND TRUE CACHE BOOL "boost python lib found")
             else()
             message(STATUS "Sorry but no boost-python found.")
             endif()
