cmake change to copy boost_python dll for win32

--- a/core/python/CMakeLists.txt
+++ b/core/python/CMakeLists.txt
@@ -118,8 +118,19 @@ foreach(program ${SCRIPTS})
 endforeach(program)
 
 if (WIN32)
-	file(COPY ${Boost_PYTHON_LIBRARY} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-    #file(COPY ${Boost_THREAD_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-	#file(COPY ${Boost_SYSTEM_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
-	install(PROGRAMS ${Boost_PYTHON_LIBRARY} DESTINATION bin)
+    get_filename_component(Boost_PYTHON_ARCHIVE ${Boost_PYTHON_LIBRARY} LAST_EXT)
+    # message("############################## " ${Boost_PYTHON_ARCHIVE})
+
+    if (Boost_PYTHON_ARCHIVE MATCHES ".a")
+        # message("############################## " ${Boost_PYTHON_LIBRARY})
+        string(REGEX REPLACE "[.]a" "" Boost_PYTHON_DLL ${Boost_PYTHON_LIBRARY})
+        # message("############################## " ${Boost_PYTHON_DLL})
+        file(COPY ${Boost_PYTHON_DLL} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+        install(PROGRAMS ${Boost_PYTHON_DLL} DESTINATION bin)
+    else ()
+        file(COPY ${Boost_PYTHON_LIBRARY} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+        #file(COPY ${Boost_THREAD_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+        #file(COPY ${Boost_SYSTEM_LIBRARIES} DESTINATION ${CMAKE_BINARY_DIR}/bin)
+        install(PROGRAMS ${Boost_PYTHON_LIBRARY} DESTINATION bin)
+    endif()
 endif()
