fixed scope problem in cmake boost_python find

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,15 +367,18 @@ endif()
 # Manuall check for boost python
 ################################################################################
 function(find_boost_python_manual bp_version)
-    message(STATUS " ... searching for libboost_python${bp_version}")
+    message(STATUS "----------- searching for libboost_python${bp_version}")
     find_package(Boost 1.68 COMPONENTS "python${bp_version}")
 
     if (${Boost_PYTHON${bp_version}_FOUND})
-        set(Boost_PYTHON_FOUND ${Boost_PYTHON${bp_version}_FOUND} CACHE BOOL "boost python lib found")
-        set(Boost_PYTHON_LIBRARY ${Boost_PYTHON${bp_version}_LIBRARY_RELEASE} CACHE FILEPATH "boost python lib(find_boost_python_manual)")
-        message(STATUS " ... found: ${Boost_PYTHON_LIBRARY}")
+        set(Boost_PYTHON_FOUND ${Boost_PYTHON${bp_version}_FOUND} PARENT_SCOPE)
+        set(Boost_PYTHON_LIBRARY ${Boost_PYTHON${bp_version}_LIBRARY_RELEASE} PARENT_SCOPE)
+        # set(Boost_PYTHON_FOUND ${Boost_PYTHON${bp_version}_FOUND} CACHE BOOL "boost python lib found")
+        # set(Boost_PYTHON_LIBRARY ${Boost_PYTHON${bp_version}_LIBRARY_RELEASE} CACHE FILEPATH "boost python lib(find_boost_python_manual)")
+
+        message(STATUS "----------- found: ${Boost_PYTHON_LIBRARY}")
     else()
-        message(STATUS " ... not found.")
+        message(STATUS "----------- not found.")
     endif()
 endfunction()
 
@@ -404,11 +407,19 @@ if (NOT Boost_PYTHON_LIBRARY)
         # the name for py3 boost-python library lacks probably py3 suffix, which is different for different OS
         #set (Boost_PYTHON_FOUND False)
         #set (Boost_PYTHON_LIBRARY "None")
-        message(STATUS "***** ${Boost_PYTHON_FOUND}, ${Boost_PYTHON_LIBRARY}")
-
+        if (NOT Boost_PYTHON_FOUND)
+            # /usr/lib/libboost_python37.so # gentoo >=boost-1.70)
+            set(bp_version "${Python_VERSION_MAJOR}${Python_VERSION_MINOR}")
+            find_boost_python_manual(${bp_version})
+        endif()
         if (NOT Boost_PYTHON_FOUND)
             #/usr/lib/x86_64-linux-gnu/libboost_python-py34.so (debian)
             set(bp_version "-py${Python_VERSION_MAJOR}${Python_VERSION_MINOR}")
+            find_boost_python_manual(${bp_version})
+        endif()
+        if (NOT Boost_PYTHON_FOUND)
+            # /usr/lib/libboost_python3-py37.so # weird debian)
+            set(bp_version "${Python_VERSION_MAJOR}-py${Python_VERSION_MAJOR}${Python_VERSION_MINOR}")
             find_boost_python_manual(${bp_version})
         endif()
         if (NOT Boost_PYTHON_FOUND)
@@ -421,17 +432,6 @@ if (NOT Boost_PYTHON_LIBRARY)
             set(bp_version "-${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}")
             find_boost_python_manual(${bp_version})
         endif()
-        if (NOT Boost_PYTHON_FOUND)
-            # /usr/lib/libboost_python37.so # gentoo >=boost-1.70)
-            set(bp_version "${Python_VERSION_MAJOR}${Python_VERSION_MINOR}")
-            find_boost_python_manual(${bp_version})
-        endif()
-        if (NOT Boost_PYTHON_FOUND)
-            # /usr/lib/libboost_python3-py37.so # weird debian)
-            set(bp_version "${Python_VERSION_MAJOR}-py${Python_VERSION_MAJOR}${Python_VERSION_MINOR}")
-            find_boost_python_manual(${bp_version})
-        endif()
-
     endif()
 
     if (Boost_PYTHON_FOUND)
