--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 # pip install -r requirements.txt --user
 # pip list
-# pip install package== --user # list all possible versions
+# pip install package== --user # list all possible versions for <pip-20.3
+# pip install --use-deprecated=legacy-resolver package== --user # same as above for >=pip-20.3 and <pip-21
 # pip install package==version --user
 
 pyplusplus==1.8.4
 
 # for py3.8
 pygccxml==2.0.0 
-sphinx
+sphinx==1.8.5
+#sphinxcontrib-bibtex>2
 sphinxcontrib-bibtex<2.0.0
 sphinxcontrib-programoutput
 sphinxcontrib-doxylink
